# Formal-Parsers

./: README.md
CYK/: CMakeLists.txt  test.sh
CYK/lib/: CYK.h  additional.h
CYK/src/: CYK.cpp  TestSerialization.cpp  additional.cpp
Earley/: CMakeLists.txt
Earley/lib/: additional.h  earley.h
Earley/src/: TestSerialization.cpp  additional.cpp  earley.cpp
LR0/: CMakeLists.txt
LR0/lib/: DNA.h  additional.h  table.h
LR0/src/: DNA.cpp  LR0.cpp  TestSerialization.cpp  additional.cpp  table.cpp
LR1/: CMakeLists.txt
LR1/lib/: DNA.h  LR1.h  additional.h
LR1/src/: DNA.cpp  LR1.cpp  TestSerialization.cpp  additional.cpp  table.cpp
NFA_TO_DFA/: CMakeLists.txt
NFA_TO_DFA/src/: DFA.cpp  TestSerialization.cpp  print.cpp  process.cpp
NFA_TO_MDFA/: CMakeLists.txt  Readme
NFA_TO_MDFA/src/: DFA.cpp  TestSerialization.cpp  eps.cpp  minimization.cpp  print.cpp  process.cpp
